--- a/data/data.yaml
+++ b/data/data.yaml
@@ -1,9 +1,11 @@
-train: ../data/train/images
-val: ../data/valid/images
-test: ../data/test/images
 
-nc: 1
-names: ['Floor']
+path: /home/abheekp/BlackSpot_FloorDetection/data  # Base path to dataset
+train: train/images  # Path to train images (relative to 'path')
+val: valid/images    # Path to validation images (relative to 'path')
+test: test/images    # Path to test images (relative to 'path')
+
+nc: 1  # Number of classes
+names: ['Floor']  # Class names
 
 roboflow:
   workspace: ben-dover-wbbwh
