--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ valid/DALL-E-2025-01-05-02-45-45-A-very-simple-indoor-room-designed-to-simulate-
 /test
 /train
 /valid
+/blackspot
+/blackspot
+/floor_detection8
+/sam2
